updated some error handling and details page stuff

--- a/imports/ui/accounts/auth-join.scss
+++ b/imports/ui/accounts/auth-join.scss
@@ -6,6 +6,10 @@
   .list {
     .item-stacked-label {
       background-color: white;
+      .assertive {
+        font-size: 15px;
+        padding: 0px;
+      }
     }
   }
   .or-login {
