--- a/imports/ui/accounts/auth-login.scss
+++ b/imports/ui/accounts/auth-login.scss
@@ -8,6 +8,10 @@
   .list {
     .item-stacked-label {
       background-color: white;
+      .assertive {
+        font-size: 15px;
+        padding: 0px;
+      }
     }
   }
   #login-auth-submit {
